// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderBy matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OrderBy
    classes={
      Object {
        "select": "select",
        "text": "text",
        "wrap": "wrap",
      }
    }
    options={
      Array [
        Object {
          "text": "Option 1",
          "value": 1,
        },
        Object {
          "text": "Option 2,",
          "value": 2,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="text"
        />,
        <select
          className="select"
          onChange={[Function]}
          value={undefined}
        >
          <option
            value={1}
          >
            Option 1
          </option>
          <option
            value={2}
          >
            Option 2,
          </option>
        </select>,
      ],
      "className": "wrap",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "text",
        },
        "ref": null,
        "rendered": null,
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <option
              value={1}
            >
              Option 1
            </option>,
            <option
              value={2}
            >
              Option 2,
            </option>,
          ],
          "className": "select",
          "onChange": [Function],
          "value": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "Option 1",
              "value": 1,
            },
            "ref": null,
            "rendered": "Option 1",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "Option 2,",
              "value": 2,
            },
            "ref": null,
            "rendered": "Option 2,",
            "type": "option",
          },
        ],
        "type": "select",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="text"
          />,
          <select
            className="select"
            onChange={[Function]}
            value={undefined}
          >
            <option
              value={1}
            >
              Option 1
            </option>
            <option
              value={2}
            >
              Option 2,
            </option>
          </select>,
        ],
        "className": "wrap",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option
                value={1}
              >
                Option 1
              </option>,
              <option
                value={2}
              >
                Option 2,
              </option>,
            ],
            "className": "select",
            "onChange": [Function],
            "value": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "Option 1",
                "value": 1,
              },
              "ref": null,
              "rendered": "Option 1",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "Option 2,",
                "value": 2,
              },
              "ref": null,
              "rendered": "Option 2,",
              "type": "option",
            },
          ],
          "type": "select",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`OrderBy styles matches the snapshot 1`] = `
Object {
  "select": Object {
    "appearance": "none",
    "background": "url(data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgogICAgICAgICAgICAJIHZpZXdCb3g9IjAgMCAxMiAxMiIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMTIgMTI7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KICAgICAgICAgICAgPHBhdGggZmlsbD0iIzE0NzZmYiIgZD0iTTYsMy42aDMuMkM5LjcsMy42LDEwLDQsMTAsNC40YzAsMC4yLTAuMSwwLjQtMC4yLDAuNUw4LjYsNi4xbC0yLDJjLTAuMywwLjMtMC44LDAuMy0xLjEsMGwwLDBsLTItMkwyLjIsNQogICAgICAgICAgICAJQzEuOSw0LjcsMS44LDQuMiwyLjEsMy45YzAuMi0wLjIsMC40LTAuMywwLjYtMC4zQzIuNywzLjYsNiwzLjYsNiwzLjZ6Ii8+CiAgICAgICAgICAgIDwvc3ZnPg==)",
    "backgroundPosition": "calc(100% - 2px) 5px",
    "backgroundSize": "12px 12px",
    "border": "0",
    "color": "#727272",
    "cursor": "pointer",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": "14px",
    "marginLeft": "5px",
    "outline": "0",
    "paddingRight": "25px",
    "textAlign": "right",
  },
  "text": Object {
    "color": "#727272",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": "14px",
  },
  "wrap": Object {
    "display": "flex",
  },
}
`;

exports[`OrderByJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(OrderBy)
    options={
      Array [
        Object {
          "text": "Option 1",
          "value": 1,
        },
        Object {
          "text": "Option 2,",
          "value": 2,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "select": "OrderBy-select-0-1-3",
        "text": "OrderBy-text-0-1-2",
        "wrap": "OrderBy-wrap-0-1-1",
      },
      "options": Array [
        Object {
          "text": "Option 1",
          "value": 1,
        },
        Object {
          "text": "Option 2,",
          "value": 2,
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "select": "OrderBy-select-0-1-3",
          "text": "OrderBy-text-0-1-2",
          "wrap": "OrderBy-wrap-0-1-1",
        },
        "options": Array [
          Object {
            "text": "Option 1",
            "value": 1,
          },
          Object {
            "text": "Option 2,",
            "value": 2,
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
